<?xml version="1.0"?>
<package format="2">
  <name>frispy</name>
  <version>1.0.0</version>
  <description>listens for bounding boxes.</description>
  <maintainer email="deantorkelson@utexas.edu">Dean Torkelson</maintainer>
  <license>BSD</license>
  <maintainer email="deantorkelson@utexas.edu">Dean Torkelson</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>actionlib</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
</package>
